kafka-cluster/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  spring-cloud-namespace
  labels: 
    name : spring-cloud-namespace
