kafka-cluster/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka-broker
  name: kafka-service
  namespace: spring-cloud-namespace
spec:
  selector:
    app: kafka-broker
  ports:
  - port: 9092
    
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kafka-broker
  name: kafka-broker
  namespace : spring-cloud-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-broker
  template:
    metadata:
      labels:
        app: kafka-broker
    spec:
      hostname: kafka-broker
      containers:
      - env:  
        - name: KAFKA_BROKER_ID
          value:  "1"
        - name: KAFKA_ZOOKEEPER_CONNECT
          value: "10.244.0.29:2181"
        - name: KAFKA_LISTENERS
          value: PLAINTEXT://:9092
        - name: KAFKA_ADVERTISED_LISTENERS
          value: PLAINTEXT://kafka-broker:9092
        image: wurstmeister/kafka
        imagePullPolicy: IfNotPresent
        name: kafka-broker
        ports:
           - containerPort: 9092
