kafka-cluster/zookeper.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zookeeper
  name: zookeeper
  namespace: spring-cloud-namespace
spec:
  ports:
  - name:  zookeeper-port
    port:  2181
    targetPort:  2181
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper-deployment
  namespace: spring-cloud-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper-deployment
  template:
    metadata:
      labels:
        app: zookeeper-deployment
    spec:
      containers:
      - name: zookeeper-deployment
        image:  wurstmeister/zookeeper
        ports:
          - containerPort: 2181
