kafka-cluster/allow-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all
  namespace: spring-cloud-namespace
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
